# langchain4android

./: .cursorrules  .gitattributes  .gitignore  AGENTS.md  AI_TOOLS.md  CLAUDE.md  DEVELOPMENT.md  PRODUCT.md  PRODUCT_ROADMAP_2026.md  README.md  RELEASE_NOTE_v1.0.md  TODO_MEDIAPIPE_GPU.md  WAKE_WORD_CHECKLIST.md  analyze_contour.py  build.gradle.kts  check_alignment.py  check_elf.py  crop_face_4_3.py  detekt-config.yml  extract_gpupixel_texcoords.py  generate_from_user_image.py  gradle.properties  jitpack.yml  patch_elf.py  picme-release.apk  settings.gradle.kts  start-kimi-cli.sh  visualize_eyes_landmarks.py  visualize_nose_landmarks.py
.agent/: plan.md
.claude/: CLAUDE.md  settings.local.json
.kimi/: AGENTS.md  skills
.lingma/: skills
.qoder/: settings.local.json
agent-core/: AGENTS.md  LANGCHAIN4J_MIGRATION.md  build.gradle  build.gradle.kts
agents/: ANDROID_TEAM_OVERVIEW.md  LITE_TEAM_CONFIG.md  README.md  USAGE_EXAMPLES.md  co_agent.md  pm_agent.md  qa_agent.md  rd_agent.md  review_agent.md
app/: AGENTS.md  build.gradle.kts  detekt-baseline.xml  proguard-rules.pro
beauty-api/: AGENTS.md  build.gradle.kts
beauty-engine/: AGENTS.md  README.md  build.gradle.kts  consumer-rules.pro
beauty-engine/src/main/cpp/: CMakeLists.txt  llm_jni_bridge.cpp  mnn_clip_encoder.cpp  mnn_clip_encoder.h  mnn_face_detector.cpp  mnn_face_detector.h  mnn_jni_bridge.cpp  ncnn_face_detector.cpp  ncnn_face_detector.h  ncnn_jni_bridge.cpp
buildSrc/: build.gradle.kts
cloudflare/: package.json  worker.js  wrangler.toml
docs/: 00-INDEX.md  ADR-001-beauty-engine-architecture.md  ADR-002-opengl-offscreen-unified-pipeline.md  ADR-003-coordinate-system-management.md  AGENTS_SPEC.md  AGENT_ARCHITECTURE_MEMO.md  AGENT_ARCHITECTURE_V2.md  AGENT_FUNCTION_MATRIX.md  AI_CODING_AUTONOMOUS_LOOP.md  AI_CODING_EXPERIENCE_SUMMARY.md  Analysis_Report.md  BEAUTY_ENGINE_FALLBACK.md  BEAUTY_PREVIEW_OPTIMIZATION_STAGE2.md  BIG_BEAUTY_GPUPixel_PORTING_PLAN.md  BIG_BEAUTY_INSIGHTFACE_106_MAPPING.md  BIG_BEAUTY_QA_EXECUTION_CHECKLIST.md  BIG_BEAUTY_TECH_SPEC.md  CAMERA_PREVIEW_GUIDE.md  CAMERA_PREVIEW_RATIO_TECHNICAL.md  CAMERA_PREVIEW_SOLUTION.md  CAMERA_PREVIEW_TECH_SPEC.md  COORDINATE_SYSTEMS.md  COORDINATE_SYSTEM_STANDARD.md  DEVELOPMENT.md  DOC_CONSISTENCY_AUDIT.md  DOC_FIX_PLAN.md  FACE_DETECTION_ENGINE_ARCHITECTURE.md  FEATURES.md  GPU_PHOTO_IMPLEMENTATION_GUIDE.md  GPU_PHOTO_MAJOR_CHANGES.md  Gallery.md  MEDIAPIPE_468_POINTS.md  MEDIAPIPE_468_SYMMETRY_TABLE.md  MEDIAPIPE_468_TO_106_MAPPING_STRATEGY.md  Mamba Agent.md  PIXELFREE_FALLBACK_TECH_SPEC.md  PIXELFREE_INTEGRATION.md  PRD-FRAME-SYNC-MAKEUP.md  REALTIME_BEAUTY_TECHNICAL_PLAN.md  ROADMAP-ADR-002.md  (+17 more)
gpupixel/: build.gradle.kts
gpupixel/src/main/cpp/: CMakeLists.txt
gpupixel/src/main/cpp/include/gpupixel/: gpupixel_define.h
gpupixel/src/main/cpp/include/gpupixel/source/: source_yuv.h
gpupixel/src/main/cpp/src/: CMakeLists.txt
gpupixel/src/main/cpp/src/android/jni/: jni_face_detector.cc  jni_gpupixel.cc  jni_source_raw_data.cc  jni_source_yuv.cc
gpupixel/src/main/cpp/src/face_detector/: face_detector.cc
gpupixel/src/main/cpp/src/filter/: filter.cc
gpupixel/src/main/cpp/src/sink/: sink_surface.cc
gpupixel/src/main/cpp/src/source/: source_yuv.cc
gradle/: libs.versions.toml
mamba-agent/: LANGCHAIN4J_MIGRATION.md  build.gradle  consumer-rules.pro
runtime-core/: AGENTS.md  build.gradle.kts
runtime-core/src/main/cpp/: CMakeLists.txt  llm_jni_bridge.cpp
scripts/: README.md  adb-resource-monitor.sh  agent-test.sh  agent-tester  ai-gate.sh  auto-dev-loop.sh  build.sh  change-report.sh  check-coordinate-annotation.sh  check-doc-coordinate-annotation.sh  check_doc_sync.py  convert_pnnx_to_standard.py  crash-detector.sh  debug_offsets.py  detection_perf_test.sh  doc-sync-guardian.sh  fix_ncnn_param.py  (+27 more)
sentencepiece/src/main/cpp/: CMakeLists.txt  README.md  sentencepiece_jni.cpp
sentencepiece/src/main/cpp/benchmark/: .gitignore  README.md  analyze_results.py  download_models.py  prepare_balanced_raw_multilingual.py  run_bench.py  setup_env.sh
sentencepiece/src/main/cpp/cmake/: modify_headers.cmake
sentencepiece/src/main/cpp/contrib/docker/: Dockerfile
sentencepiece/src/main/cpp/contrib/nlcodec/: README.md  benchmark.sh  bpe_model_trainer_nlcodec.cc  bpe_model_trainer_nlcodec.h  bpe_model_trainer_nlcodec_test.cc
sentencepiece/src/main/cpp/data/: nfc_cf.tsv  nfd_cf.tsv  nfkd.tsv  test_oss_model.model  wagahaiwa_nekodearu_2000_bpe_byte.model
sentencepiece/src/main/cpp/doc/: cli.md  cpp.md  model_proto.md  normalization.md  options.md  performance_benchmark.md  piece_constraints.md  special_symbols.md
sentencepiece/src/main/cpp/python/: MANIFEST.in  README.md  build_bundled.sh  build_sdist.sh  exports.txt  exports_mac.txt  pyproject.toml  setup.py  tokenizer_comparison_cheat_sheet.md
sentencepiece/src/main/cpp/python/src/sentencepiece/: __init__.py  __init__.pyi  py.typed  sentencepiece_pybind.cc
sentencepiece/src/main/cpp/python/test/: clean_sentencepiece_test_manual.py  gen_stubs_test.py  gil_release_test.py  numpy_test.py  sentencepiece_test.py  test_bpe_model.model  typing_smoke.py
sentencepiece/src/main/cpp/python/tools/: gen_stubs.py
sentencepiece/src/main/cpp/src/: CMakeLists.txt  bpe_model.cc  bpe_model.h  bpe_model_test.cc  bpe_model_trainer.cc  bpe_model_trainer.h  builder.cc  builder.h  builder_test.cc  char_model.cc  char_model.h  char_model_trainer.cc  char_model_trainer.h  common.h  compile_charsmap_main.cc  filesystem.cc  filesystem.h  invalid_model_test.cc  model_interface.cc  model_interface.h  model_interface_test.cc  normalizer.cc  normalizer.h  normalizer_test.cc  pretokenizer_for_training.cc  pretokenizer_for_training.h  pretokenizer_for_training_test.cc  sentencepiece_processor.cc  sentencepiece_processor.h  sentencepiece_processor_benchmarks_test.cc  sentencepiece_processor_parallel_test.cc  sentencepiece_processor_test.cc  sentencepiece_trainer.cc  sentencepiece_trainer.h  sentencepiece_trainer_test.cc  spec_parser.h  spm_encode_main.cc  spm_train_main.cc  test_main.cc  testharness.h  (+19 more)
(+2470 files in other folders)
