cmake_minimum_required(VERSION 3.22.1)

project(
  GPUPixel
  VERSION 1.3.0
  LANGUAGES CXX C)

option(GPUPIXEL_BUILD_SHARED_LIBS "Default build shared libraries" ON)
option(GPUPIXEL_ENABLE_FACE_DETECTOR "Enable face detection functionality" ON)
option(GPUPIXEL_EXTERNAL_CODE "Build with external code" OFF)
option(GPUPIXEL_INSTALL "Generate the install target" OFF)

if(GPUPIXEL_ENABLE_FACE_DETECTOR)
  add_compile_definitions(GPUPIXEL_ENABLE_FACE_DETECTOR)
endif()

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(BUILD_OUTPUT_DIR ${CMAKE_BINARY_DIR}/out)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${BUILD_OUTPUT_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${BUILD_OUTPUT_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${BUILD_OUTPUT_DIR}/bin)

foreach(OUTPUTCONFIG IN ITEMS DEBUG RELEASE RELWITHDEBINFO MINSIZEREL)
  string(TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG)
  set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${BUILD_OUTPUT_DIR}/lib)
  set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${BUILD_OUTPUT_DIR}/lib)
  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${BUILD_OUTPUT_DIR}/bin)
endforeach()

add_subdirectory(third_party)
add_subdirectory(src)
