[build-system]
requires = ["setuptools>=61.0", "wheel", "pybind11>=2.12"]
build-backend = "setuptools.build_meta"

[project]
name = "sentencepiece"
version = "0.2.2"
authors = [
  { name="Taku Kudo", email="taku@google.com" },
]
description = "Unsupervised text tokenizer and detokenizer."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
urls = { "Homepage" = "https://github.com/google/sentencepiece" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Free Threading :: 2 - Beta",
  "Topic :: Text Processing :: Linguistic",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
numpy = ["numpy"]
protobuf = ["protobuf"]
test = ["pytest", "numpy", "protobuf"]

[tool.pytest.ini_options]
testpaths = ["test"]
markers = [
    "thread_unsafe: mark test as thread-unsafe for pytest-run-parallel"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sentencepiece = ["*.bin", "*.pyi", "py.typed"]

[tool.cibuildwheel]
test-requires = ["pytest", "numpy", "protobuf"]
test-command = "pytest -v {project}/test"

[[tool.cibuildwheel.overrides]]
select = "*-win_arm64"
test-requires = ["pytest", "protobuf"]

